--- a/src/main/js/html/dashboard.html
+++ b/src/main/js/html/dashboard.html
@@ -21,13 +21,13 @@
     </div>
   </div>
   <div class="columns">
-    <iis-calendar data-on-update="dashboardCtrl.refreshTables()"></iis-calendar>
+    <iis-calendar data-on-update="$ctrl.refreshTables()"></iis-calendar>
   </div>
   <div class="columns">
-    <div class="colx2-left">
+    <div data-ng-if="$ctrl.flags.nursePayEnabled" class="colx2-left">
       <div data-dd4-table="TableType.PAYABLE"></div>
     </div>
-    <div class="colx2-right">
+    <div data-ng-if="$ctrl.flags.vendorBillingEnabled" class="colx2-right">
       <div data-dd4-table="TableType.BILLABLE"></div>
     </div>
   </div>
