--- a/src/main/js/html/user_add.html
+++ b/src/main/js/html/user_add.html
@@ -1,46 +1,51 @@
 <article class="container_12">
   <section class="grid_8">
     <div class="block-border">
-      <p class="message error no-margin" data-ng-show="userAddCtrl.error">{{userAddCtrl.error}}</p>
+      <p class="message error no-margin" data-ng-show="$ctrl.error">{{$ctrl.error}}</p>
       <div class="block-content form">
         <h1>User Registration</h1>
         <fieldset class="white-bg required">
           <div class="columns">
             <div class="colx3-left">
               <label for="firstName" class="">First Name</label>
-              <input type="text" data-ng-model="userAddCtrl.user.firstName" id="firstName" class="full-width">
+              <input type="text" data-ng-model="$ctrl.user.firstName" id="firstName" class="full-width">
             </div>
             <div class="colx3-center">
               <label for="lastName" class="">Last Name</label>
-              <input type="text" data-ng-model="userAddCtrl.user.lastName" id="lastName" class="full-width">
+              <input type="text" data-ng-model="$ctrl.user.lastName" id="lastName" class="full-width">
             </div>
             <div class="colx3-right">
-              <label for="email" class="">Email Address</label>
-              <input type="text" data-ng-model="userAddCtrl.user.email" id="email" class="full-width">
+              <label for="username">Username</label>
+              <input  type="text" data-ng-model="$ctrl.user.username" id="username" class="full-width"/>
             </div>
           </div>
           <div class="columns">
             <div class="colx3-left">
               <label>Account Type</label>
-              <select data-ng-model="userAddCtrl.user.type"
-                      data-ng-options="type.id as type.name for type in userAddCtrl.userTypes">
+              <select data-ng-model="$ctrl.user.typeId"
+                      data-ng-options="type.id as type.name for type in $ctrl.userTypes">
               </select>
             </div>
             <p class="colx3-center">
-              <label>Password</label>
-              <input type="password" name="password" class="full-width"/>
-            </p>
-            <p class="colx3-right">
-              <label>Confirm Password</label>
-              <input type="password" name="passConf" class="full-width"/>
+              <label for="email" class="">Email Address</label>
+              <input type="text" data-ng-model="$ctrl.user.email" id="email" class="full-width">
             </p>
           </div>
-          <label for="notes" class="">Notes</label>
-          <textarea data-ng-model="userAddCtrl.user.notes" id="notes" rows="10" class="full-width"></textarea>
+
+          <div class="columns">
+            <p class="colx2-left">
+              <label for="password">Password</label>
+              <input type="password" id="password" data-ng-model="$ctrl.password" class="full-width"/>
+            </p>
+            <p class="colx2-right">
+              <label for="confirmation">Confirm Password</label>
+              <input type="password" id="confirmation"  data-ng-model="$ctrl.confirmation" class="full-width"/>
+            </p>
+          </div>
         </fieldset>
 
         <fieldset class="grey-bg no-margin">
-          <button style="float:right" data-ng-click="userAddCtrl.create()">Submit</button>
+          <button style="float:right" data-ng-click="$ctrl.create()">Submit</button>
         </fieldset>
 
       </div>
